--- a/test.compose.yaml
+++ b/test.compose.yaml
@@ -13,6 +13,12 @@ services:
       - mcc
       - census
       - bookworm
+  
+  frontend:
+    image: 'nginx'
+    volumes:
+      - './frontend/frontend:/var/www/html'
+      - './frontend/nginx.conf:/etc/nginx/conf.d/default.conf'
 
   mcc:
     build:
