--- a/test.compose.yaml
+++ b/test.compose.yaml
@@ -16,7 +16,6 @@ services:
     networks:
       - backend
     
-  
   frontend:
     image: 'nginx'
     volumes:
@@ -42,8 +41,6 @@ services:
       retries: 5
     networks:
       - backend
-      - custom_bridge_network
-      
   
   census:
     build:
@@ -91,7 +88,7 @@ services:
     ports:
       - 5432:5432
 
-
 networks:
   backend:
-  custom_bridge_network:
+    external: true
+    
